# gpt-sovits-orchestrator

./: .env.example  README.md  README.zh-Hans.md  pyproject.toml
docs/: data-pipeline.md
src/gpt_sovits_orchestrator/: ai_hobbyist_main.py  config.py  flow_common.py  main.py  pipeline_dirs.py  trainer_run.py
src/gpt_sovits_orchestrator/ai_hobbyist/: __init__.py  flow.py  import_dataset.py  paths.py  slug.py  workspace.py
src/gpt_sovits_orchestrator/assemble/: manifest.py  paths.py  sources.py
src/gpt_sovits_orchestrator/dry_vocal/: __init__.py  flow.py  inbox.py
src/gpt_sovits_orchestrator/g2p/: japanese.py  manifest.py  normalize.py  validation.py
src/gpt_sovits_orchestrator/hubert/: npz.py  preprocess.py
src/gpt_sovits_orchestrator/semantic/: npz.py  preprocess.py
src/gpt_sovits_orchestrator/sv/: npz.py  preprocess.py
src/gpt_sovits_orchestrator/tasks/: __init__.py  ai_hobbyist_import.py  assemble.py  g2p.py  hubert.py  semantic.py  slice.py  sv.py  transcribe.py  wav32k.py
src/gpt_sovits_orchestrator/utils/: npz_stream.py  slice_filename.py
src/gpt_sovits_orchestrator/wav32k/: preprocess.py  zip_paths.py
src/gpt_sovits_orchestrator/workspace/: __init__.py  pipeline.py  speaker_workspace.py
tests/: test_trainer_run.py  test_workspace.py
